ホーム画面のui-spec追加

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "generate:ui-spec": "ui-spec-md generate -m ui-spec -d dist/public",
-    "edit:ui-spec": "ui-spec-md edit-server -m md -d dist/edit"
+    "edit:ui-spec": "ui-spec-md edit-server -m ui-spec -d dist/edit"
   },
   "repository": {
     "type": "git",
